<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        android:text="@string/confirmar_datos" />

    <LinearLayout
        android:id="@+id/linearNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelNombre"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombre"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFecha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearNombre"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelFecha"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearFecha"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelTelefono"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCorreo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearTelefono"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelCorreo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDescripcion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearCorreo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewLabelDescripcion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hint_descripcion"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="right"
            />

    </LinearLayout>


    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/accion_enviar"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>